# OpenCV_GPU

./: CMakeLists.txt  Dockerfile  main.cpp  setup-cuda.sh  video_to_frames.sh
